finish implementation of shopping cart features, and refactor
