# backend/codeblurb-backend/src/main/java/hu/codeblurb/backend/controller/dto/content/IncorrectSolutionResponse.java
@@ -1,5 +1,0 @@
-package hu.codeblurb.backend.controller.dto.content;
-
-public record IncorrectSolutionResponse(Integer incorrectQuestionId, Integer incorrectSolutionSent,
-                                        Integer correctSolution) {
-}
