# backend/codeblurb-backend/src/main/java/hu/codeblurb/backend/controller/dto/content/QuizSolutionResponse.java
@@ -3,5 +3,5 @@ package hu.codeblurb.backend.controller.dto.content;
 import java.util.List;
 
 public record QuizSolutionResponse(List<Integer> correctAnswerQuestionIds,
-                                   List<IncorrectSolutionResponse> incorrectSolutions) {
+                                   List<IncorrectQuizSolutionResponse> incorrectSolutions) {
 }
