# backend/codeblurb-backend/src/main/java/hu/codeblurb/backend/security/controller/dto/LoginRequest.java
@@ -2,6 +2,10 @@ package hu.codeblurb.backend.security.controller.dto;
 
 import lombok.Builder;
 
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Size;
+
 @Builder
-public record LoginRequest(String username, String password) {
+public record LoginRequest(@NotNull @Size(min = 4, max = 30) String username,
+                           @NotNull @Size(min = 8, max = 60) String password) {
 }
