# backend/codeblurb-backend/src/main/resources/openapi.yaml
@@ -1,7 +1,10 @@
 openapi: 3.0.1
 info:
   title: OpenAPI definition
-  version: v0
+  version: v0.1
+servers:
+  - url: https://api.bence.kovacs.host
+    description: Temporary server url
 paths:
   /shopping/add-item/{shoppingCartItem}:
     post:
@@ -77,7 +80,7 @@ paths:
         content:
           application/json:
             schema:
-              type: string
+              $ref: '#/components/schemas/CodeSolutionRequest'
         required: true
       responses:
         "200":
@@ -86,6 +89,43 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/CodeSolutionResponse'
+        "400":
+          description: Bad request
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /content/code/code-quiz-solution/{contentId}:
+    post:
+      tags:
+        - Content
+      operationId: checkCodeQuizSolutionFor
+      parameters:
+        - name: contentId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CodeQuizSolutionRequest'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/CodeQuizSolutionResponse'
+        "400":
+          description: Bad request
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /auth/register:
     post:
       tags:
@@ -100,6 +140,12 @@ paths:
       responses:
         "200":
           description: OK
+        "400":
+          description: Bad request
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /auth/refresh:
     post:
       tags:
@@ -118,6 +164,12 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/RefreshTokenResponse'
+        "400":
+          description: Bad request
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /auth/logout:
     post:
       tags:
@@ -144,6 +196,12 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/LoginResponse'
+        "400":
+          description: Bad request
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /auth/force-logout:
     post:
       tags:
@@ -221,6 +279,27 @@ paths:
                 $ref: '#/components/schemas/ShoppingCartResponse'
 components:
   schemas:
+    MinimalContentBundleResponse:
+      type: object
+      properties:
+        includedContent:
+          type: array
+          items:
+            $ref: '#/components/schemas/MinimalContentResponse'
+    MinimalContentResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        contentType:
+          type: string
+          enum:
+            - CODING
+            - VIDEO
+            - QUIZ
     ContentBundleResponse:
       type: object
       properties:
@@ -267,6 +346,10 @@ components:
         solutionIndex:
           type: integer
           format: int32
+        solutionChar:
+          type: string
+          minLength: 1
+          maxLength: 1
     CodingContentResponse:
       allOf:
         - $ref: '#/components/schemas/ContentResponse'
@@ -329,14 +412,19 @@ components:
     ShoppingItemResponse:
       type: object
       properties:
+        id:
+          type: integer
+          format: int32
         title:
           type: string
         price:
           type: number
           format: double
         contentBundle:
-          $ref: '#/components/schemas/ContentBundleResponse'
+          $ref: '#/components/schemas/MinimalContentBundleResponse'
     QuizSolutionRequest:
+      required:
+        - solutions
       type: object
       properties:
         solutions:
@@ -344,7 +432,7 @@ components:
           additionalProperties:
             type: integer
             format: int32
-    IncorrectSolutionsResponse:
+    IncorrectQuizSolutionResponse:
       type: object
       properties:
         incorrectQuestionId:
@@ -367,27 +455,36 @@ components:
         incorrectSolutions:
           type: array
           items:
-            $ref: '#/components/schemas/IncorrectSolutionsResponse'
+            $ref: '#/components/schemas/IncorrectQuizSolutionResponse'
+    CodeSolutionRequest:
+      required:
+        - code
+      type: object
+      properties:
+        code:
+          maxLength: 32768
+          minLength: 0
+          type: string
     CodeSolutionResponse:
       type: object
       properties:
         results:
           type: array
           items:
-            $ref: '#/components/schemas/TestCaseResultResponse'
+            $ref: '#/components/schemas/TestCaseOutcomeResponse'
         overallResult:
           type: string
           enum:
             - ALL_PASSED
             - TESTCASES_FAILED
-    TestCaseResultResponse:
+    TestCaseOutcomeResponse:
       type: object
       properties:
         expected:
           type: string
         actual:
           type: string
-        result:
+        outcome:
           type: string
           enum:
             - PASSED
@@ -396,14 +493,54 @@ components:
           type: array
           items:
             type: string
+    CodeQuizSolutionRequest:
+      required:
+        - solutionsByIndex
+      type: object
+      properties:
+        solutionsByIndex:
+          type: object
+          additionalProperties:
+            type: string
+    CodeQuizSolutionResponse:
+      type: object
+      properties:
+        correctAnswerIndices:
+          type: array
+          items:
+            type: integer
+            format: int32
+        incorrectSolutions:
+          type: array
+          items:
+            $ref: '#/components/schemas/IncorrectCodeQuizSolutionResponse'
+    IncorrectCodeQuizSolutionResponse:
+      type: object
+      properties:
+        incorrectSolutionIndex:
+          type: integer
+          format: int32
+        incorrectAnswer:
+          type: string
+        correctSolution:
+          type: string
     RegisterRequest:
+      required:
+        - password
+        - username
       type: object
       properties:
         username:
+          maxLength: 30
+          minLength: 4
           type: string
         password:
+          maxLength: 60
+          minLength: 8
           type: string
     RefreshTokenRequest:
+      required:
+        - refreshToken
       type: object
       properties:
         refreshToken:
@@ -416,11 +553,18 @@ components:
         refreshToken:
           type: string
     LoginRequest:
+      required:
+        - password
+        - username
       type: object
       properties:
         username:
+          maxLength: 30
+          minLength: 4
           type: string
         password:
+          maxLength: 60
+          minLength: 8
           type: string
     LoginResponse:
       type: object
